# AAC_audio

./: .gitignore  README.md
eye_focus_tracker/: README.md  app.py  requirements.txt
eye_focus_tracker/src/: __init__.py  openai_utils.py  runtime.py
personalized_visual_phonemes/: .gitignore  README.md  app.py  requirements.txt
personalized_visual_phonemes/scripts/: bootstrap_voice_clone.sh
personalized_visual_phonemes/src/: __init__.py  openai_utils.py  phonemes.py  voice_clone.py  voice_clone_worker.py
personalized_visual_phonemes/voice_clone_runtime/: pyproject.toml
task/: task.md  task2.md  task3.md  task4.md
