[project]
name = "aac-voice-clone-runtime"
version = "0.1.0"
requires-python = ">=3.9,<3.10"
dependencies = [
  "huggingface-hub[hf_xet]>=0.26,<1",
  "inflect==5.3.0",
  "librosa==0.9.2",
  "matplotlib==3.5.1",
  "numpy>=1.26,<2",
  "scikit-learn==1.0.2",
  "scipy>=1.7,<2",
  "setuptools<=80.8.0",
  "soundfile==0.12.1",
  "Unidecode==1.3.2",
]

[project.optional-dependencies]
cpu = ["torch==1.10.*"]
cuda = ["torch==1.10.*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cuda", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu113"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
required-environments = [
  "sys_platform == 'win32'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
conflicts = [[{ extra = "cpu" }, { extra = "cuda" }]]
